--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,4 @@ authors = ["Ivan Tham <pickfire@riseup.net>"]
 edition = "2021"
 
 [dependencies]
-regex = "1"
+regex = { version = "1", default-features = false, features = ["std", "perf"] }
