--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,8 @@ authors = ["Ivan Tham <pickfire@riseup.net>"]
 edition = "2021"
 
 [dependencies]
-regex = { version = "1", default-features = false, features = ["std", "perf"] }
+lopdf = { version = "0.35.0", features = ["serde"] }
+rayon = "1.10.0"
+serde = "1"
+serde_json = "1"
+shellexpand = "3.1.0"
